--- a/index.css
+++ b/index.css
@@ -3,3 +3,12 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
+header h1{
+    color: rgb(66, 187, 187);
+    display: flex;
+    justify-content: center;
+}
+main{
+    background-color: palegoldenrod;
+    color: black ; 
+}
