--- a/landepage.css
+++ b/landepage.css
@@ -12,11 +12,11 @@ header{
     justify-content: space-between;
     align-items: center;
     flex-direction: 20px;
-    
 }
 #title{
     flex-direction: column;
     line-height: 10px;
+    
 }
 #botaojatem{
     border: 2px solid blue;
@@ -56,7 +56,6 @@ spam{
 p{
     line-height: 20px;
     max-width: 500px;
-
 }
 img{
     width: 600px;
@@ -82,6 +81,12 @@ form[type="submit"]:hover{
     color: white;
     font-weight: bold;
 
+}
+#botaoenviar{
+    width: 30%;
+    height: 0%;
+    display: flex;
+    font-size: 15px;
 
 }
     
